# Laelaps2_DDPG

./: README.md
training_system/: CMakeLists.txt  package.xml
training_system/config/: ddpg_ellipse.yaml  env_ellipse_4ramps.yaml  env_ellipse_flat.yaml  env_ellipse_ramp.yaml
training_system/launch/: test_pretrained_model.launch  training_ddpg_RL_Ellipse_gaits.launch
training_system/scripts/: README.md  controllers_connection.py  ddpg_laelaps_RL_ellipse_gaits.py  ddpg_model.py  gazebo_connection.py  laelaps_env_ellipse.py  run_pretrained_model.py
xacro_model/gazebo_listener/: listener.cc
xacro_model/laelaps_control/: CMakeLists.txt  package.xml
xacro_model/laelaps_control/config/: laelaps_control.yaml
xacro_model/laelaps_control/launch/: laelaps_control.launch
xacro_model/laelaps_control/msg/: Toe.msg
xacro_model/laelaps_control/src/: toe4_ellipse_publisher.cpp
xacro_model/laelaps_description/: CMakeLists.txt  package.xml
xacro_model/laelaps_description/meshes/: body.STL  cable.STL  cable.dae  femur.STL  femur.dae  foot.STL  foot.dae  spring_part_a.STL  spring_part_a.dae  spring_part_b.STL  tibia.STL  tibia.dae  transmission_arm.STL  transmission_arm.dae  transmission_arm_right.dae
xacro_model/laelaps_description/urdf/: laelaps.xacro  laelaps_robot.urdf.xacro  leg.urdf.xacro
xacro_model/laelaps_gazebo/: CMakeLists.txt  package.xml
xacro_model/laelaps_gazebo/launch/: laelaps_world_downRamp.launch  laelaps_world_downRamp_15degrees.launch  laelaps_world_downRamp_4ramps.launch  laelaps_world_flat.launch  laelaps_world_upRamp.launch  laelaps_world_upRamp_15degrees.launch  laelaps_world_upRamp_4ramps.launch
xacro_model/laelaps_gazebo/worlds/: laelaps_downRamp.world  laelaps_downRamp_10deg_4ramps.world  laelaps_downRamp_15degrees.world  laelaps_flat.world  laelaps_upRamp.world  laelaps_upRamp_10deg_4ramps.world  laelaps_upRamp_15degrees.world
